# llvm-project

clang/lib/Basic/Targets/: WebAssembly.h
lld/wasm/: WriterUtils.cpp
llvm/: CMakeLists.txt
llvm/include/llvm-c/: LLJIT.h  Orc.h
llvm/include/llvm/BinaryFormat/: Wasm.h  WasmRelocs.def
llvm/include/llvm/CodeGen/: TargetLowering.h  ValueTypes.td
llvm/include/llvm/MC/: MCExpr.h  MCSymbolWasm.h
llvm/include/llvm/Object/: Wasm.h
llvm/include/llvm/Support/: MachineValueType.h
llvm/lib/BinaryFormat/: Wasm.cpp
llvm/lib/CodeGen/: CodeGenPrepare.cpp  ValueTypes.cpp
llvm/lib/CodeGen/SelectionDAG/: SelectionDAGBuilder.cpp
llvm/lib/ExecutionEngine/Orc/: OrcV2CBindings.cpp
llvm/lib/MC/: MCExpr.cpp  WasmObjectWriter.cpp
llvm/lib/Object/: WasmObjectFile.cpp
llvm/lib/ObjectYAML/: WasmEmitter.cpp  WasmYAML.cpp
llvm/lib/Transforms/Vectorize/: LoadStoreVectorizer.cpp
llvm/test/CodeGen/WebAssembly/: anyref.ll  reg-argument.mir  reg-copy.mir
llvm/test/CodeGen/X86/: fused-fma.ll
llvm/utils/TableGen/: CodeGenTarget.cpp
mlir/cmake/modules/: AddMLIR.cmake
mlir/include/mlir/: InitAllPasses.h
mlir/include/mlir/Analysis/: Dominance.h
mlir/include/mlir/IR/: Block.h  OpDefinition.h  RegionGraphTraits.h
mlir/include/mlir/Transforms/: LoopLikeInterface.h  LoopLikeInterface.td  Passes.h
mlir/lib/Analysis/: CMakeLists.txt
mlir/lib/Conversion/AVX512ToLLVM/: CMakeLists.txt
mlir/lib/Conversion/AffineToStandard/: CMakeLists.txt
mlir/lib/Conversion/GPUToCUDA/: CMakeLists.txt
mlir/lib/Conversion/GPUToSPIRV/: CMakeLists.txt
mlir/lib/Conversion/GPUToVulkan/: CMakeLists.txt
mlir/lib/Conversion/LinalgToLLVM/: CMakeLists.txt
mlir/lib/Conversion/LinalgToSPIRV/: CMakeLists.txt
mlir/lib/Conversion/StandardToStandard/: CMakeLists.txt
mlir/lib/ExecutionEngine/: CMakeLists.txt
mlir/lib/IR/: Block.cpp
mlir/lib/Parser/: CMakeLists.txt
mlir/lib/Pass/: CMakeLists.txt
mlir/lib/Transforms/: CMakeLists.txt  LoopInvariantCodeMotion.cpp  LoopRestructure.cpp
mlir/test/Transforms/: loop-invariant-code-motion-not-guaranteed.mlir  loop-restructure.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-opt/: CMakeLists.txt
mlir/tools/mlir-shlib/: CMakeLists.txt
(+20 files in other folders)
